# Pioneer-Work-Suite

./: .gitignore  README.md  Repo Structure  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  render.yaml  taconfig.base.json  tsconfig.base.json
.github/workflows/: backend.yml  desktop-build.yml  pages.yml
apps/: package.json
apps/api/: .env.example  package.json
apps/api/prisma/: schema.prisma
apps/api/scripts/: migrate-deploy.mjs
apps/api/src/: auth.ts  config.ts  documents.ts  events.ts  mail.ts  mailer.ts  main.ts  prisma.ts  server.ts  sync.ts  syncMutation.ts  tasks.ts
apps/api/src/config/: env.ts
apps/api/src/db/: client.ts
apps/api/src/middleware/: auth.ts  errorHandler.ts
apps/api/src/tests/: api.test.ts
apps/api/src/types/: express.d.ts
apps/web/: .env  .env.production  index.html  package.json  tsconfig.json  vite.config.ts
apps/web/src/: .env  App.tsx  http.ts  main.tsx
apps/web/src/api/: auth.ts  authApi.ts  cloudChanges.ts  documents.ts  events.ts  http.ts  httpClient.ts  mail.ts  offlineSyncQueue.test.ts  offlineSyncQueue.ts  session.ts  settings.ts  storage.ts  sync.ts  syncSupport.ts  tasks.ts  workspaceBackup.ts
apps/web/src/commands/: commandRegistry.ts  commandTypes.ts  useCommands.ts  useGlobalCommands.ts
desktop/: package.json
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/src/: main.rs
pioneeros/: Makefile  README.md  manifest.json
pioneeros/src/: main.c  web_runtime.h
pioneeros/tests/: host_safety_test.c
scripts/: check-maintainability.mjs  sync-version.mjs
(+107 files in other folders)
