[package]
name = "pioneer-work-suite"
version = "0.1.0"
description = "Pioneer Work Suite Desktop"
authors = ["Del"]
edition = "2021"

[dependencies]
tauri = { version = "1.5", features = ["api-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]